# ytt

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: README.md  build.yml  ci.yml  release.yml
docs/: CHATGPT_CLEANUP.md  COMPARISON.md  FORMATS.md  RATE_LIMITING.md  README.md
src/: chatgpt.rs  error.rs  lib.rs  main.rs  parser.rs
